syntax = "proto3";

import "common/id.proto";
option (ecs_component_id) = 1017;

import "common/Color3.proto";

enum TextureWrapMode {
    Repeat = 0;
    Clamp = 1;
    Mirror = 2;
    MirrorOnce = 3;
}

enum FilterMode
{
    Point = 0;
    Bilinear = 1;
    Trilinear = 2;
}

enum TransparencyMode
{
    Opaque = 0;
    AlphaTest = 1;
    AlphaBlend = 2;
    AlphaTestAndAlphaBlend = 3;
    Auto = 4;
}

message PBMaterial {  
    message Texture {
        string src = 1;
        optional TextureWrapMode wrapMode = 2; // default = TextureWrapMode.Clamp
        optional FilterMode filterMode = 3; // default = FilterMode.Bilinear
    }

    optional Texture texture = 1; // default = null
    optional float alphaTest = 2; // default = 0.5. range value: from 0 to 1
    optional bool castShadows = 3; // default =  true

    optional Texture alphaTexture = 4; // default = null
    optional Texture emissiveTexture = 5; // default = null
    optional Texture bumpTexture = 6; // default = null

    optional Color3 albedoColor = 7; // default = white;
    optional Color3 emissiveColor = 8; // default = black;
    optional Color3 reflectivityColor = 9; // default = white;

    optional TransparencyMode transparencyMode = 10; // default = TransparencyMode.Auto

    optional float metallic = 11; // default = 0.5
    optional float roughness = 12; // default = 0.5
    optional float glossiness = 13; // default = 1

    optional float specularIntensity = 14; // default = 1
    optional float emissiveIntensity = 15; // default = 2
    optional float directIntensity = 16; // default = 1
}
